06 - Edit files after 4 autocheck
1. Edit link in Privacy
2. Add file checked.svg in sprite

--- a/index.html
+++ b/index.html
@@ -560,15 +560,14 @@
             <label for="user-privacy" class="label-privacy">
               <span class="checkbox-icon">
                 <svg width="10" height="8" class="icon">
-                  <use href="./images/svg-1-original/checkbox.svg"></use>
+                  <use href="./images/icons.svg#checkbox"></use>
                 </svg>
               </span>
 
               I accept the terms and conditions of the 
 
-              <span class="privacy-link">
-                <a href="">Privacy Policy</a>
-              </span>
+              <a href="" class="privacy-link">Privacy Policy</a>
+
               
 
             </label>
