07 - Edit files after 5 autocheck
1. Edit icon-checked
2. Edit :checked

--- a/index.html
+++ b/index.html
@@ -557,10 +557,13 @@
 
           <div class="modal-privacy">
             <input type="checkbox" name="user-privacy" id="user-privacy" value="true" class="checkbox-input visually-hidden" />
+
+
             <label for="user-privacy" class="label-privacy">
+
               <span class="checkbox-icon">
                 <svg width="10" height="8" class="icon">
-                  <use href="./images/icons.svg#checkbox"></use>
+                  <use href="./images/icons.svg#icon-checkbox"></use>
                 </svg>
               </span>
 
